; ModuleID = '/home/carl/AnghaBench/lede/scripts/extr_mkhash.c_md5_hash.c'
source_filename = "/home/carl/AnghaBench/lede/scripts/extr_mkhash.c_md5_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MD5_DIGEST_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @md5_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @md5_hash(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %8 = load i32, i32* @MD5_DIGEST_LENGTH, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %4, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %5, align 8
  %12 = call i32 @MD5_begin(i32* %3)
  br label %13

13:                                               ; preds = %17, %1
  %14 = load i32*, i32** %2, align 8
  %15 = call i8* @hash_buf(i32* %14, i32* %7)
  store i8* %15, i8** %6, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %13
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @MD5_hash(i8* %18, i32 %19, i32* %3)
  br label %13

21:                                               ; preds = %13
  %22 = call i32 @MD5_end(i8* %11, i32* %3)
  %23 = load i32, i32* @MD5_DIGEST_LENGTH, align 4
  %24 = call i8* @hash_string(i8* %11, i32 %23)
  %25 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %25)
  ret i8* %24
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @MD5_begin(i32*) #2

declare dso_local i8* @hash_buf(i32*, i32*) #2

declare dso_local i32 @MD5_hash(i8*, i32, i32*) #2

declare dso_local i32 @MD5_end(i8*, i32*) #2

declare dso_local i8* @hash_string(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
